assets/styles.css
/* ... */
@-moz-viewport    { width: device-width; }
@-ms-viewport     { width: device-width; }
@-o-viewport      { width: device-width; }
@viewport         { width: device-width; }



/*
 * Globals
 */

/* Links */
a,
a:focus,
a:hover {
  color: #fff;
  text-decoration: underline;
}

.mastfoot a:hover svg {
    fill: #aaa;
}

/* Custom default button */
.btn-default,
.btn-default:hover,
.btn-default:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritence from `body` */
  background-color: #fff;
  border: 1px solid #fff;
}


/*
 * Base structure
 */

html,
body {
  min-height: 100%;
}
body {
    font-family: 'Open Sans', sans-serif;
    color: #fff;
    text-shadow: 0 2px 3px rgba(0,0,0,.6);
    background-image: radial-gradient(circle, transparent 0%, transparent 40%, #000  100%), repeating-linear-gradient(transparent, transparent 54px, rgba(255,255,255,0.2) 54px, rgba(255,255,255,0.2) 55px), repeating-linear-gradient(to right, transparent, transparent 54px, rgba(255,255,255,0.2) 54px, rgba(255,255,255,0.2) 55px), repeating-linear-gradient(transparent, transparent 10px, rgba(255,255,255, 0.1) 10px, rgba(255,255,255,0.1) 11px), repeating-linear-gradient(to right, transparent, transparent 10px, rgba(255,255,255, 0.1) 10px, rgba(255,255,255,0.1) 11px), radial-gradient(circle, rgb(4, 61, 172) 0%, rgb(4, 49, 136) 30%);
}

svg {
    vertical-align: middle;
    fill: #fff;
}

/* Extra markup and styles for table-esque vertical and horizontal centering */
.wrapper {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: center;
  min-height: 100%;
}

.cover-container {
  margin-right: auto;
  margin-left: auto;
}

/*
 * Cover
 */

.cover {
  padding: 30px;
  background: rgba(255, 255, 255, 0.1);
  -webkit-box-shadow: 0 2px 3px 2px rgba(0,0,0,0.2);
  box-shadow: 0 2px 3px 2px rgba(0,0,0,0.2);
}

.cover h1 {
  margin: 0;
}

.cover h3 {
    margin-bottom: 5px;
}

.cover svg {
    width: 18px;
    height: 18px;
    margin-right: -3px;
    margin-left: 1px;
}

.cover img {
    max-width: 100%;
}


/*
 * Footer
 */
.mastfoot {
    text-align: center;
    color: #999; /* IE8 proofing */
    color: rgba(255,255,255,.5);
    margin-bottom: 20px;
    margin-top: 30px;
}

.mastfoot svg {
    height: 24px;
    width: 24px;
}


/*
 * Affix and center
 */
@media (max-width: 768px) {
        .cover-container {
            margin-top: 20px;
        }
}

@media (min-width: 768px) {
  /* Start the vertical centering */
  .wrapper {
    justify-content: center;
  }
  /* Handle the widths */
  .cover-container {
    width: 100%; /* Must be percentage or pixels for horizontal alignment */
  }
}

@media (min-width: 992px) {
  .cover-container {
    width: 700px;
  }
}

h1, h2, h3, h4 {
    font-family: 'Roboto', sans-serif;
}

h1, h2, h3 { 
    font-weight: 900;
}

